# Spoolman

./: .gitignore  MIGRATION_TO_GO.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
client/: package.json  vite.config.ts
docs/: openapi.json  openapi_sanitized.json
spoolman-go/: gen.cfg.yaml  go.mod  go.sum  main.go
spoolman-go/api/: api.gen.go  generate.go  server.go
spoolman-go/cmd/entgen/: main.go
spoolman-go/ent/: client.go  ent.go  filament.go  filament_create.go  filament_delete.go  filament_query.go  filament_update.go  filamentfield.go  filamentfield_create.go  filamentfield_delete.go  filamentfield_query.go  filamentfield_update.go  mutation.go  runtime.go  setting.go  setting_create.go  setting_delete.go  setting_query.go  setting_update.go  spool.go  spool_create.go  spool_delete.go  spool_query.go  spool_update.go  spoolfield.go  spoolfield_create.go  spoolfield_delete.go  spoolfield_query.go  spoolfield_update.go  spoolvendor.go  spoolvendor_create.go  spoolvendor_delete.go  spoolvendor_query.go  spoolvendor_update.go  tx.go  vendor.go  vendor_create.go  vendor_delete.go  vendor_query.go  vendor_update.go  (+5 more)
spoolman-go/ent/enttest/: enttest.go
spoolman-go/ent/filament/: filament.go  where.go
spoolman-go/ent/filamentfield/: filamentfield.go  where.go
spoolman-go/ent/hook/: hook.go
spoolman-go/ent/migrate/: schema.go
spoolman-go/ent/predicate/: predicate.go
spoolman-go/ent/runtime/: runtime.go
spoolman-go/ent/schema/: filament.go  filamentfield.go  setting.go  spool.go  spoolfield.go  vendor.go  vendorfield.go
spoolman-go/ent/setting/: setting.go  where.go
spoolman-go/ent/spool/: spool.go  where.go
spoolman-go/ent/spoolfield/: spoolfield.go  where.go
spoolman-go/ent/spoolvendor/: spoolvendor.go  where.go
spoolman-go/ent/vendorfield/: vendorfield.go  where.go
spoolman-go/pkg/config/: config.go
spoolman-go/pkg/fsutil/: fsutil.go
spoolman-go/pkg/log/: log.go
spoolman-go/pkg/term/: term.go
